--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </table>
 
     <div class="img_circle">
-        <img src="./asset/img/foto.jpeg" alt="">
+        <img src="./foto.jpeg" alt="">
     </div>
 
     <hr>
